# pdf_file_evaluation

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  process_file.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: cicd.yml
api_python/: Dockerfile  README.md  app.py  requirements.txt
iac/: abbreviation.json  main.bicep  main.parameters.json
iac/core/connectivity/: vnet.bicep
iac/core/host/: appservice.bicep  appserviceplan.bicep  containerapp.bicep  containerregistry.bicep  managedEnvironment.bicep
iac/core/iam/: genericRoleAssignment.json  roleassignment.bicep
iac/core/monitor/: loganalytics.bicep  monitoring.bicep
script/: devops.sh  upload_file.sh
test/: create_test_pdf.py
