[build-system]
requires = ["setuptools==68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_file_evaluation"
version = "2024.10.1"
license = { text = "MIT" }
description = "A example project processing pdf files"
readme = "README.md"
authors = [{ name = "Lamoreaux Lab", email = "info@golamoreaux.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12.0"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/briglx/pdf_file_evaluation"
"Source Code" = "https://github.com/briglx/pdf_file_evaluation.git"
"Bug Reports" = "https://github.com/briglx/pdf_file_evaluation/issues"

[tool.setuptools]
platforms = ["any"]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["pdf_file_evaluation*"]

[tool.codespell]
skip = './.*,*.csv,*.json,*.pyc,./docs/_build/*,./htmlcov/*,*.workbook,*.egg-info'
quiet-level = 2
ignore-words-list = "aks"

[tool.bandit]
exclude = [".venv/*.*"]
exclude_dirs = [".venv"]
tests = [
    "B108",
    "B306",
    "B307",
    "B313",
    "B314",
    "B315",
    "B316",
    "B317",
    "B318",
    "B319",
    "B320",
    "B602",
    "B604",
]
[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
# splits long import on multiple lines indented by 4 spaces
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = "pdf_file_evaluation,tests"
forced_separate = "tests"
combine_as_imports = true

# Used with flake8
[tool.pydocstyle]
match-dir = '[^node_module].*'

[tool.pylint.MAIN]
py-version = "3.12"
jobs = 2
load-plugins = ["pylint.extensions.code_style", "pylint.extensions.typing"]
persistent = false
fail-on = ["I"]

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"

[tool.rstcheck]
report_level = "INFO"
